--- a/src/component/Global/Global.scss
+++ b/src/component/Global/Global.scss
@@ -159,6 +159,16 @@ body {
     .detail-content .container .info .castss {
         display: none;
     }
+
+    .tv-page {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .header {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
   }
 
   
